--- a/SecuredSystem/Views/Shared/_Layout.cshtml
+++ b/SecuredSystem/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Customers", "Index", "Customer")</li>
+                    <li>@Html.ActionLink("Admin", "Index", "Audit")</li>
                 </ul>
             }
             else
