--- a/SecuredSystem/Views/Home/Contact.cshtml
+++ b/SecuredSystem/Views/Home/Contact.cshtml
@@ -1,11 +1,12 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
+<h2 class="deep">@ViewBag.Title.</h2>
+<h3 class="deep">@ViewBag.Message</h3>
+<br />
+<br />
 <address>
-    Fountain Universiyty<br />
+    Fountain University<br />
     Osogbo,<br />
     <abbr title="Phone">P:</abbr>
     08090876543
