--- a/SecuredSystem/Content/Site.css
+++ b/SecuredSystem/Content/Site.css
@@ -1,8 +1,20 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    
 }
-
+.jumbotron{
+    background-image:url('images/bg.jpg');
+    color:#9c2283;
+}
+.deep{
+    color: #b94a48;
+}
+.main{
+    background-image: url('images/Freedom-2.jpg');
+    background-size: cover;
+    color: white;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
