--- a/SecuredSystem/Views/Home/About.cshtml
+++ b/SecuredSystem/Views/Home/About.cshtml
@@ -1,10 +1,11 @@
 ﻿@{
     ViewBag.Title = "About Call Center Management System";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>
+<h2 class="deep">@ViewBag.Title.</h2>
+<h3 class="deep">@ViewBag.Message</h3>
+<br />
+<br />
+<p >
     The call center management system deals with management of call centers. This system is user friendly and flexible
     to maintain with minimum data entry and availability of information on request with response in seconds.
 </p>
