--- a/SecuredSystem/Views/Home/Index.cshtml
+++ b/SecuredSystem/Views/Home/Index.cshtml
@@ -1,11 +1,73 @@
 ﻿@{
     ViewBag.Title = "Call Center Management System";
 }
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="../../Content/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
+            <div class="carousel-caption" role="option">
+                <p>
+                    Protect the data of your beloved customers.
+                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
+                        Learn More
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../../Content/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
+            <div class="carousel-caption" role="option">
+                <p>
+                    Keep track of the complaints of customers
+                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
+                        Learn More
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../../Content/images/banner3.svg" alt="Package Management" class="img-responsive" />
+            <div class="carousel-caption" role="option">
+                <p>
+                    Keep track of changes made to customers' data
+                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
+                        Learn More
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../../Content/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
+            <div class="carousel-caption" role="option">
+                <p>
+                    Build cordial relationship with your customers
+                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
+                        Learn More
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 
 <div class="jumbotron">
     <h1>Introduction</h1>
     <p>
-        The call center management system deals with management of call centers. This system is user friendly and flexible 
+        The call center management system deals with management of call centers. This system is user friendly and flexible
         to maintain with minimum data entry and availability of information on request with response in seconds.
     </p>
     <p><a class="btn btn-default" href="Home/ABout">Learn more &raquo;</a></p>
@@ -25,7 +87,7 @@
     </div>
     <div class="col-md-4">
         <h2>Objectives</h2>
-        <ul class="lead list-group">
+        <ul class="lead list-group deep">
             <li class="list-group-item">Having customers information</li>
             <li class="list-group-item">Assigning the 7 didgits code to all old users</li>
             <li class="list-group-item">Assigning the 7 digits to new users as soon as they have their new account</li>
@@ -37,7 +99,7 @@
     <div class="col-md-4">
         <h2>Verification Questions</h2>
         <p class="lead">The following information can be used for the first authentication.</p>
-        <ul class="lead">
+        <ul class="lead deep">
             <li class="list-group-item">Name of the caller</li>
             <li class="list-group-item">Contact Details</li>
             <li class="list-group-item">Access Code or Pin</li>
