--- a/SecuredSystem/Views/Complaint/Details.cshtml
+++ b/SecuredSystem/Views/Complaint/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model SecuredSystem.Models.Complaint
-
+@using SecuredSystem.Models
 @{
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2 class="deep">Details</h2>
 
 <div>
-    <h4>Complaint</h4>
+    <h4 class="deep">Complaint</h4>
 	<hr />
     <dl class="dl-horizontal">
         <dt>
@@ -30,8 +30,8 @@
             @Html.DisplayNameFor(model => model.status)
         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.status)
+        <dd class="@(Model.Flag == @Flag.Urgent ? "yellow" : Model.Flag == @Flag.Normal ? "orange" : "green")">
+            @Html.DisplayFor(model => model.Flag)
         </dd>
 
     </dl>
