--- a/SecuredSystem/Views/Audit/Index.cshtml
+++ b/SecuredSystem/Views/Audit/Index.cshtml
@@ -10,7 +10,7 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 *@
-<table class="table">
+<table class="table card">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Admin)
