--- a/SecuredSystem/Views/Complaint/Details.cshtml
+++ b/SecuredSystem/Views/Complaint/Details.cshtml
@@ -9,7 +9,7 @@
 <div>
     <h4 class="deep">Complaint</h4>
 	<hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal card">
         <dt>
             @Html.DisplayNameFor(model => model.Customer.Surname)
         </dt>
