--- a/SecuredSystem/Views/Audit/Edit.cshtml
+++ b/SecuredSystem/Views/Audit/Edit.cshtml
@@ -11,7 +11,7 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+    <div class="form-horizontal card">
         <h4>AuditTable</h4>
         <hr />
         @Html.ValidationSummary(true)
