--- a/SecuredSystem/Views/Home/Index.cshtml
+++ b/SecuredSystem/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="../../Content/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
+            <img src="../../Content/images/everest.jpeg" alt="ASP.NET"  class="img-responsive fill" />
             <div class="carousel-caption" role="option">
                 <p>
                     Protect the data of your beloved customers.
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="../../Content/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
+            <img src="../../Content/images/green.jpeg" alt="Visual Studio" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
                     Keep track of the complaints of customers
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="../../Content/images/banner3.svg" alt="Package Management" class="img-responsive" />
+            <img src="../../Content/images/lake.jpeg" alt="Package Management" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
                     Keep track of changes made to customers' data
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="../../Content/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
+            <img src="../../Content/images/mountains.jpeg" alt="Microsoft Azure" class="img-responsive fill" />
             <div class="carousel-caption" role="option">
                 <p>
                     Build cordial relationship with your customers
@@ -74,7 +74,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 card column">
         <h2>Aim</h2>
         
         <p class="lead">
@@ -85,9 +85,9 @@
         </p>
         <p><a href="Home/ABout" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 card column">
         <h2>Objectives</h2>
-        <ul class="lead list-group deep">
+        <ul class="lead list-group">
             <li class="list-group-item">Having customers information</li>
             <li class="list-group-item">Assigning the 7 didgits code to all old users</li>
             <li class="list-group-item">Assigning the 7 digits to new users as soon as they have their new account</li>
@@ -96,28 +96,29 @@
         </ul>
         <p><a class="btn btn-default" href="Home/ABout">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 card column">
         <h2>Verification Questions</h2>
         <p class="lead">The following information can be used for the first authentication.</p>
-        <ul class="lead deep">
+        <ul class="lead">
             <li class="list-group-item">Name of the caller</li>
             <li class="list-group-item">Contact Details</li>
             <li class="list-group-item">Access Code or Pin</li>
         </ul>
-        <dl class="lead">
+        <dl>
             <dt>Name of the Caller</dt>
-            <dd>The caller has to provide his/her name which must match the record on the account. 
-            The account might have only one name, which is the account holder's or several such has in the case of a family or company
+            <dd>
+                The caller has to provide his/her name which must match the record on the account.
+                The account might have only one name, which is the account holder's or several such has in the case of a family or company
             </dd>
             <dt>Contact and Personal Details</dt>
             <dd>
-                The next data to verify is several of the contact and personal details on record. It can be an address (residential, business or billing address), 
-                phone number, or email address. At times, security guidelines will allow verification of details of the account-holder such as birth-date, place of 
+                The next data to verify is several of the contact and personal details on record. It can be an address (residential, business or billing address),
+                phone number, or email address. At times, security guidelines will allow verification of details of the account-holder such as birth-date, place of
                 birth, mother's maiden name, etc.
             </dd>
             <dt>Access Code or Pin</dt>
             <dd>
-                An account pin of 7 digit would be assigned by default to customer at the start of the account activation. Sometimes, the access code can be a 
+                An account pin of 7 digit would be assigned by default to customer at the start of the account activation. Sometimes, the access code can be a
                 combination of letters and numbers known only to the account owner.
             </dd>
         </dl>
